tests/negative/private_field_access.lu
require "godot"

class Secret
  @name: String = "hidden"
end

class Main < Node
  def ready: void
    secret: Secret = Secret.new
    value: String = secret.name
  end
end
